# yuriever.github.io

./: .gitignore  404.html  CHANGELOG.md  README.md  base.txt  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
archive/: index.html  latextojs.nb  macro-latex-to-mathjax.nb
archive/disable-option/: index.html
archive/hotkey/: index.html
archive/index_archive/: index.html
archive/mac-tricks/: index.html
archive/mathjax-configuration/: index.html
archive/mathjax_configuration/: index.html
archive/mkdocs/: index.html
archive/pyenv/: index.html
bib/: distribution.bib  evaluation.bib  refs.bib  spinor-helicity.bib  xAct.bib
css/: admonition.css  admonition_custom.css  blackbox.css  box-format.css  box-thm.css  box-type.css  box.css  code.css  const.css  extra.css  footnote.css  heading.css  image.css  list.css  mathjax.css  misc.css  table.css  test.css  theme-color.css
css-test/: test-box-color.css
custom/: main.html
custom/partials/: content.html
doc/index_doc/: index.html
doc/mkdocs/: index.html
docs/: index.md  lightnovel.md  sora.md  symbolic.md  workbench.md
docs/bib/: Lacia-CCFT.bib  TA-analysis.bib  refs.bib
docs/css/: admonition.css  blackbox.css  box-test-color.css  box-theorem.css  box-thm.css  box-type.css  box.css  code.css  color.css  const.css  curtain.css  footnote.css  heading.css  list.css  mathjax.css  misc.css  table.css  theme-color.css
docs/doc/: mkdocs.md  mma.md
docs/js/: box-thm.js  mathjax-setting.js  mathjax.js  random-text.js
docs/light/: lightnovel.md
docs/lightnovel/: 2024-fall-quantum-physics-TA.md  2025-autumn-analysis-2-TA.md  CCFTconvention.md  DLMF.md  Sweedler-algebra.md  distribution.md  spinor-helicity.md
hooks/: mathjax_env_preprocess.py  thm-counter.py
img/: img.nb
javascripts/: mathjax.js
js/: box-thm.js  mathjax-setting.js  mathjax.js  random-text.js  random_text.js
lightnovel/: 2dSmatrixintegrability.html  index.html
ochiba/: index_ochiba.nb
private/: commands.md alias  preamble.sty
search/: search_index.json
site/: 404.html  index.html
sora/: index.html  index_sora.nb
stylesheet/: lily.nb
subdir_archieve/: latextojs.nb
symbolic/: index.html
temp/: index.html
workbench/: index.html
(+328 files in other folders)
