[project]
name = "yuriever"
version = "1.0.0"
description = "yuriever's personal website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material>=9.6.5",
    "pybtex",
    "pygments-mathematica",
    "mkdocs-bibtex>=2.0.0",
    "mkdocs-caption",
    # https://github.com/squidfunk/mkdocs-material/issues/8478
    "click==8.2.1"
]

[tool.uv.sources]
pygments-mathematica = { git = "https://github.com/yuriever/pygments-mathematica" }
pybtex = { git = "https://github.com/yuriever/pybtex" }
mkdocs-bibtex = { git = "https://github.com/yuriever/mkdocs-bibtex" }

# pygments-mathematica = { path = "../pygments-mathematica/dist/pygments_mathematica-0.3.5.tar.gz" }
# pybtex = { path = "../pybtex/dist/pybtex-0.24.0.tar.gz" }
# mkdocs-bibtex = { path = "../mkdocs-bibtex/dist/mkdocs_bibtex-1.0.2.tar.gz" }

